# Programa-o-e-Desenvolvimento-de-Software-2

./: CMakeLists.txt  LICENSE  README.md  Recording_20240709_1317.mht  Recording_20240709_1327.mht  TESTEdeInterface.txt  alunos.txt
Melhorias/: CadastroAdministrador.cpp  CadastroAdministrador.hpp  CadastroAluno.hpp  main.cpp
Melhorias2/: ExcluirLivro.cpp  devolver.hpp  main.cpp
PDS2/: CadastroAdministrador.cpp  Emprestimo.cpp  PDS2.sln  main.cpp
PDS2/PDS2/: PDS2.vcxproj  (+1 more)
Teste_biblioteca/: CadastroAlunoForm.cpp  CadastroAlunoForm.h  ConsultaLivroForm.cpp  DevolucaoForm.cpp  EditarAlunoForm.cpp  EditarAlunoForm.h  EditarLivroForm.h  EmprestimoForm.h  ExcluirAlunoForm.cpp  ExcluirAlunoForm.h  LoginAdmForm.cpp  LoginAdmForm.h  LoginAlunoForm.cpp  MenuAdmForm.cpp  MenuAlunoForm.cpp  MenuAlunoForm.h  Teste_biblioteca.vcxproj  administradores.txt  emprestimos.txt  menuprincipal.h
biblioteca/: CadastroAluno.cpp  LoginAdministrador.hpp  administradores.txt  devolver.cpp  main.cpp
biblioteca arquivo para compilar no compiler c++ online/: CadastroAdministrador.cpp  CadastroLivro.hpp  Emprestimo.hpp  Livro.hpp  LoginAluno.hpp  main.cpp
interface/: CadastroLivroForm.cpp  CadastroLivroForm.h  ConsultaLivroForm.h  DevolucaoForm.h  EditarLivroForm.cpp  EmprestimoForm.cpp  ExcluirLivroForm.cpp  ExcluirLivroForm.h  LoginAlunoForm.h  MenuAdmForm.h  Teste_biblioteca.vcxproj.filters  alunos.txt  livros.txt  main.cpp
interface_biblioteca/: livros.txt
interface_biblioteca_bonus_obs_sem_inclementacoes_de_biblioteca/: administrador.txt  como_usar_esta_interface.webm
(+82 files in other folders)
